Session 2: gradient experiments

--- a/1_arrow_transition/index.html
+++ b/1_arrow_transition/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Arrow on hover transition - no Javascript</title>
   <link href="assets/style.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1645b2dde3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
